--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,17 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-ui-router": "ui-router#~0.2.18",
+    "angular-bootstrap": "~1.2.2",
+    "angular-ui-bootstrap-fontawesome": "~0.2.1",
+    "bootstrap": "~3.3.6",
+    "angular-spinner": "~0.8.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
