--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-bootstrap": "~1.2.2",
     "angular-ui-bootstrap-fontawesome": "~0.2.1",
     "bootstrap": "~3.3.6",
-    "angular-spinner": "~0.8.1"
+    "angular-spinner": "~0.8.1",
+    "components-font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
