--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-ui-bootstrap-fontawesome": "~0.2.1",
     "bootstrap": "~3.3.6",
     "angular-spinner": "~0.8.1",
-    "components-font-awesome": "~4.5.0"
+    "components-font-awesome": "~4.5.0",
+    "angular-toastr": "~1.7.0",
+    "ng-tags-input": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
